Cut over mobile Regent terminal routes
